*** empty log message ***

--- a/Documents/projektisuunnitelma/sisalto.tex
+++ b/Documents/projektisuunnitelma/sisalto.tex
@@ -172,7 +172,7 @@ Seuraavat riskit on päätetty ottaa huomioon projektissa:
 \begin{tabular}{llll} \\
 Nimi & Todennäköisyys & Vaikutus & Prioriteetti \\
 Ulkoiset & +++ & *** & (2) \\
-Aikataulu & ++++ & ** & (1) \\
+Aikataulu & +++ & ** & (1) \\
 Hidastelu & ++ & ** & (1) \\
 \end{tabular}
 
