*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -311,7 +311,7 @@ Toteutetaan ja suunnitellaan toisessa iteraatiossa
 Toteutetaan ja suunnitellaan toisessa iteraatiossa
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Teht‰v‰n_tarkistus.eps}
-	\caption{Kriteerin tarkistus}
+	\caption{Kriteerin tarkistus ja palautteen m‰‰r‰ytyminen}
 \end{figure}
 
 
