*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -316,3 +316,33 @@ Toteutetaan ja suunnitellaan toisessa iteraatiossa
 
 
 
+
+
+
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_course_tasks.eps}
+	\caption{statistiikka course tasks}
+\end{figure}
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_search_users.eps}
+	\caption{statistiikka search users}
+\end{figure}
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_sivut.eps}
+	\caption{statistiikka sivut}
+\end{figure}
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_user_info.eps}
+	\caption{statistiikka user info}
+\end{figure}
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {muut_kaaviot/yleiskuva1.eps}
+	\caption{yleiskuva1}
+\end{figure}
+
+
+
+
+
+
+
