*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -314,27 +314,27 @@ kirjautumislomakkeeseen katkaisee kuvatun sekvenssin ja palauttaa käyttäjälle
 virheilmoituksen. 
 
 
-\subsection{Register.jsp}
+\subsection{Signup.jsp}
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Käyttäjän_luominen.eps}
 	\caption{Käyttäjän rekisteröityminen}
 \end{figure}
-
 \newpage
-\subsection{Modify\_user.jsp}
+
+\subsection{ModifyUser.jsp}
 \begin{figure}[h!]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Käyttäjätietojen_muokkaaminen.eps}
 	\caption{Käyttäjätietojen muokkaaminen}
 \end{figure}
-
 \newpage
+
 \subsection{Login.jsp}
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Login.eps}
 	\caption{Kirjautuminen}
 \end{figure}
-
 \newpage
+
 \subsection{TeacherTaskList.jsp}
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Kurssinluonti.eps}
@@ -342,59 +342,66 @@ virheilmoituksen.
 \end{figure}
 
 
-
 \subsection{StudentTaskList.jsp}
 Ei kaaviota. Sisältää vain opiskelijan tehtävälistauksen. 
+\newpage
 
-\subsection{Report.jsp}
-Toteutetaan ja suunnitellaan toisessa iteraatiossa
+
+\subsection{CourseStatistics.jsp}
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_course_tasks.eps}
+	\caption{Kurssin suoritustilastot opettajalle}
+\end{figure}
+\newpage
+
 
 \subsection{UserInfo.jsp}
-Toteutetaan ja suunnitellaan toisessa iteraatiossa
-
-
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_user_info.eps}
+	\caption{statistiikka user info}
+\end{figure}
 \newpage
+%\begin{figure}[ht]
+%	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_sivut.eps}
+%	\caption{statistiikka sivut}
+%\end{figure}
+%\newpage
+
+
+\subsection{SearchUsers.jsp}
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_search_users.eps}
+	\caption{Käyttäjähaku opettajalle}
+\end{figure}
+\newpage
+
+
 \subsection{Composer.jsp}
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Taskinluonti.eps}
 	\caption{Tehtävän luominen}
 \end{figure}
 \newpage
+
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Taskin_muokkaaminen.eps}
 	\caption{Tehtävän muokkaaminen}
 \end{figure}
-
-
 \newpage
+
+
 \subsection{Answer-servlet}
 Toteutetaan ja suunnitellaan toisessa iteraatiossa
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Tehtävän_tarkistus.eps}
 	\caption{Kriteerin tarkistus ja palautteen määräytyminen}
 \end{figure}
+\newpage
 
 
 
 
 
-
-\begin{figure}[ht]
-	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_course_tasks.eps}
-	\caption{statistiikka course tasks}
-\end{figure}
-\begin{figure}[ht]
-	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_search_users.eps}
-	\caption{statistiikka search users}
-\end{figure}
-\begin{figure}[ht]
-	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_sivut.eps}
-	\caption{statistiikka sivut}
-\end{figure}
-\begin{figure}[ht]
-	\includegraphics[width=15cm] {muut_kaaviot/statistiikka_user_info.eps}
-	\caption{statistiikka user info}
-\end{figure}
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {muut_kaaviot/yleiskuva1.eps}
 	\caption{yleiskuva1}
