*** empty log message ***

--- a/Documents/suunnitteludokumentti/sisalto.tex
+++ b/Documents/suunnitteludokumentti/sisalto.tex
@@ -146,6 +146,10 @@ vaatimuksissa esitetyt teht‰vien tarkistukset ja suorituksenaikaiset tilastot sa
 toteutettua. Titokoneen k‰ytˆn ja muokkauksen yksityiskohdat j‰tet‰‰n toisen iteraation
 asioiksi.
 
+\begin{figure}[ht]
+	\includegraphics[width=15cm] {muut_kaaviot/yleiskuva1.eps}
+	\caption{yleiskuva1}
+\end{figure}
 
 
 
@@ -387,7 +391,7 @@ Ei kaaviota. Sis‰lt‰‰ vain opiskelijan teht‰v‰listauksen.
 \subsection{Composer.jsp}
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Taskinluonti.eps}
-	\caption{Teht‰v‰n luominen}
+	\caption{Teht‰v‰n luominen ja lis‰‰minen kursseille}
 \end{figure}
 \newpage
 
@@ -398,8 +402,13 @@ Ei kaaviota. Sis‰lt‰‰ vain opiskelijan teht‰v‰listauksen.
 \newpage
 
 
-\subsection{Answer-servlet}
+\subsection{AnswerTask.jsp}
 Toteutetaan ja suunnitellaan toisessa iteraatiossa
+\newpage
+
+
+\subsection{Answer-servlet}
+K‰sittelee opiskelijan vastausyritykset sek‰ tallentaa niiden tiedot tietokantaan.
 \begin{figure}[ht]
 	\includegraphics[width=15cm] {sekvenssikaaviot/Teht‰v‰n_tarkistus.eps}
 	\caption{Kriteerin tarkistus ja palautteen m‰‰r‰ytyminen}
@@ -410,10 +419,6 @@ Toteutetaan ja suunnitellaan toisessa iteraatiossa
 
 
 
-\begin{figure}[ht]
-	\includegraphics[width=15cm] {muut_kaaviot/yleiskuva1.eps}
-	\caption{yleiskuva1}
-\end{figure}
 
 
 
